--- a/BlazorShop/Pages/Index.razor
+++ b/BlazorShop/Pages/Index.razor
@@ -1,29 +1,39 @@
 ﻿@page "/"
 
+@inject ILogger<Index> Logger
+@implements IDisposable
+
 <PageTitle>Главная страница</PageTitle>
 
 <h1>Добро пожаловать в интернет магазин "Online shop"</h1>
 
-<p>текущее местное время: @time</p>
+<p>текущее местное время: @_time</p>
 
 @code {
-    private DateTime time;
+    private DateTime _time;
+    private PeriodicTimer? _timer;
+
     protected override void OnInitialized()
     {
-        time = DateTime.Now;
+        _time = DateTime.Now;
         base.OnInitialized();
         Updatetime();
 
     }
     async Task Updatetime()
     {
-        var timer = new PeriodicTimer(TimeSpan.FromSeconds(1));
-        while (await timer.WaitForNextTickAsync())
+        _timer = new PeriodicTimer(TimeSpan.FromSeconds(1));
+        while (await _timer.WaitForNextTickAsync())
         {
-            time = DateTime.Now;
+            _time = DateTime.Now;
             StateHasChanged();
 
         }
+    }
+
+    public void Dispose()
+    {
+        _timer?.Dispose();
     }
 
 }
