--- a/BlazorShop/Shared/NavMenu.razor
+++ b/BlazorShop/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Товары
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/add_product">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Добавить товар
+            </NavLink>
+        </div>
     </nav>
 </div>
 
