--- a/BlazorShop/Shared/NavMenu.razor
+++ b/BlazorShop/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/add_product">
+            <NavLink class="nav-link" href="add_product">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Добавить товар
             </NavLink>
         </div>
