--- a/BlazorShop/Pages/Index.razor
+++ b/BlazorShop/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@* @page "/"
 
 @inject ILogger<Index> Logger
 @implements IDisposable
@@ -6,6 +6,7 @@
 <PageTitle>Главная страница</PageTitle>
 
 <h1>Добро пожаловать в интернет магазин "Online shop"</h1>
+
 
 <p>текущее местное время: @_time</p>
 
@@ -36,4 +37,36 @@
         _timer?.Dispose();
     }
 
+} *@
+
+@page "/"
+
+<PageTitle>Главная страница</PageTitle>
+
+<h1>Добро пожаловать в интернет магазин "Online shop"</h1>
+
+<p>текущее местное время: @_time</p>
+
+@code {
+    private DateTime _time;
+    private Timer _timer;
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        _time = DateTime.Now;
+        _timer = new Timer(UpdateTime, null, TimeSpan.Zero, TimeSpan.FromSeconds(1));
+       
+    }
+
+    private void UpdateTime(object state)
+    {
+        _time = DateTime.Now;
+        InvokeAsync(StateHasChanged);
+    }
+
+    public void Dispose()
+    {
+        _timer?.Dispose();
+    }
 }
