--- a/BlazorShop/Pages/ProductsPage.razor
+++ b/BlazorShop/Pages/ProductsPage.razor
@@ -1,6 +1,8 @@
-﻿@page "/products"
+﻿
+@page "/products"
+@using BlazorShop.Models
 
-@inject Catalog Catalog
+@inject ICatalog Catalog
 
 <h3>Список товаров</h3>
 
