--- a/BlazorShop/Shared/NavMenu.razor
+++ b/BlazorShop/Shared/NavMenu.razor
@@ -25,8 +25,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="TimeViewer">
+            <NavLink class="nav-link" href="timeViewer">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> TimeViewer
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="send_email">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Отправить email
             </NavLink>
         </div>
     </nav>
